--- a/sarrera.html
+++ b/sarrera.html
@@ -10,13 +10,13 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0" name="viewport">
-<link rel="stylesheet" type="text/css" href="assets/css/fonts.css">
+<link rel="stylesheet" type="text/css" href="http://www.eneko.bookmark.com/assets/css/fonts.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" type="text/css">
-<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-<link rel="stylesheet" type="text/css" href="assets/css/include.css">
-<link rel="icon" href="assets/public/images/favicon.png" type="image/x-icon"/>
+<link rel="stylesheet" type="text/css" href="http://www.eneko.bookmark.com/assets/css/style.css">
+<link rel="stylesheet" type="text/css" href="http://www.eneko.bookmark.com/assets/css/include.css">
+<link rel="icon" href="http://www.eneko.bookmark.com/assets/public/images/favicon.png" type="image/x-icon"/>
 <link href="https://fonts.googleapis.com/css?family=Lily+Script+One%7CExo+2:100,300,400,700,900%7COpen+Sans+Condensed:300,700%7COpen+Sans:300,400,600,700,800%7CRoboto:100,300,400,500,700,900" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="assets/js/jquery-2.1.3.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" type="text/javascript"></script><script src="assets/js/script.js" type="text/javascript"></script><style class="bm-template-override">            #content,#footer,#header p,#content p,#footer p, #header *[data-module=text],            #content *[data-module=text],            #footer *[data-module=text],            *[data-module=text_number]            { font-family: 'Karla', sans-serif!important; /* karla */}        
+<script type="text/javascript" src="http://www.eneko.bookmark.com/assets/js/jquery-2.1.3.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" type="text/javascript"></script><script src="assets/js/script.js" type="text/javascript"></script><style class="bm-template-override">            #content,#footer,#header p,#content p,#footer p, #header *[data-module=text],            #content *[data-module=text],            #footer *[data-module=text],            *[data-module=text_number]            { font-family: 'Karla', sans-serif!important; /* karla */}        
             *[data-module=title],            #header h1, #header h2, #header h3, #header h4, #header h5, #header h6,            #content h1, #content h2, #content h3, #content h4, #content h5, #content h6,            #footer h1, #footer h2, #footer h3, #footer h4, #footer h5, #footer h6            { font-family:'Karla', sans-serif!important; /* karla */ }
 #content a, #content * a, #content p a, #footer a, #footer p a  { color:#3f3f3f; /* #3f3f3f */ }
 #header .navbar-brand {font-family:'Crimson Text', serif; /* crimsonText */ }
@@ -118,7 +118,7 @@ var prodEnv = 1;
 <div class="row">
 <div class="bm-col col-md-5"><div class="row"><div class="bm-col col-md-12">
 <div class="row"><div class="bm-col col-md-12"><div class="wrapper"><div data-module="spacer" style="height: 72px" class="bm-spacer-wrapper" data-structure='{"height":"72"}' data-id="5ece509f837ed"></div></div></div></div>
-<div class="row"><div class="bm-col col-md-12"><div class="wrapper" style="text-align: center;"><div class="bm-icr" data-module="image" data-di="image" title="" data-structure='{"proportion":"s","width":100,"path":"assets\/public\/\/images\/\/\/","target":"_self","nofollow":true,"link":{"type":"none","subtype":"email","url":"","email":"","page":""},"title":"","alt":"IMG-20180727-WA0009","roundnes":"","height":200,"pinit":false,"interest":{"x":0,"y":50},"name":"IMG-20180727-WA0009.jpg"}' style="width: 100%;" data-id="5ed3dc130969d" data-pin-no-hover="true"><div class="bm-icr-sizer bm-icr-s" title="" style='background-image: url("/assets/public/images//IMG-20180727-WA0009.jpg"); background-position: 0% 50%;'></div></div></div></div></div>
+<div class="row"><div class="bm-col col-md-12"><div class="wrapper" style="text-align: center;"><div class="bm-icr" data-module="image" data-di="image" title="" data-structure='{"proportion":"s","width":100,"path":"assets\/public\/\/images\/\/\/","target":"_self","nofollow":true,"link":{"type":"none","subtype":"email","url":"","email":"","page":""},"title":"","alt":"IMG-20180727-WA0009","roundnes":"","height":200,"pinit":false,"interest":{"x":0,"y":50},"name":"IMG-20180727-WA0009.jpg"}' style="width: 100%;" data-id="5ed3dc130969d" data-pin-no-hover="true"><div class="bm-icr-sizer bm-icr-s" title="" style='background-image: url("http://www.eneko.bookmark.com//assets/public/images//IMG-20180727-WA0009.jpg"); background-position: 0% 50%;'></div></div></div></div></div>
 </div></div></div>
 <div class="bm-col col-md-1"><div class="wrapper"><div data-module="spacer" style="height: 50px" class="bm-spacer-wrapper" data-structure='{"height":"50"}' data-id="5ed3db5576002"></div></div></div>
 <div class="bm-col col-md-6">
